@startuml
class Issue {
    Long id
    String title
    String description
    Priority priority
    Status status
    Member reporter
    Member assignee
    Member fixer
    Project project
    Boolean isDeleted
    List<Comment> comments
}

class IssueService {
    +IssueResponseDto removeIssue(Long signId, IssueDeleteRequestDto issueDeleteRequestDto)
}

class IssueRepository {
    +Optional<Issue> findByIdAndIsDeletedFalse(Long id)
    +Issue save(Issue issue)
}

class DtoConverter {
    +IssueResponseDto createIssueResponseDto(Issue issue)
}

IssueService --> IssueRepository
IssueService --> DtoConverter
Issue --> Project
Issue --> Member
Issue --> Comment
@enduml
